Fix dropdown overlap

--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ header a:hover {
   width: 20%;
   background-color:#333;
   color:#FFF;
-  z-index: +1;
+  z-index: +1000;
 }
 
 /* clears items for the dropdown */
